--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
 
-    <!-- App Logic - Defer ensures it runs after the HTML is parsed -->
-    <script src="app.js" defer></script>
 </head>
 <body>
 
@@ -128,5 +126,12 @@
         </div>
     </div>
 
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-messaging.js"></script>
+    
+    <!-- App Logic -->
+    <script src="app.js" defer></script>
 </body>
 </html>
+
