--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     
     <!-- Meta tags for a native-like mobile experience -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- ⭐ NEW: Added for better Android PWA support -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#f8f9fa">
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1c1c1e">
 
-    <!-- New Icon -->
+    <!-- Final Icon -->
     <link rel="icon" href="https://img.icons8.com/?size=100&id=9fZ3EWahbXyH&format=png&color=000000">
     <link rel="apple-touch-icon" href="https://img.icons8.com/?size=100&id=9fZ3EWahbXyH&format=png&color=000000">
 
