--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="https://img.icons8.com/?size=100&id=9fZ3EWahbXyH&format=png&color=000000">
     <link rel="apple-touch-icon" href="https://img.icons8.com/?size=100&id=9fZ3EWahbXyH&format=png&color=000000">
 
-    <!-- Manifest for PWA capabilities -->
+    <!-- ⭐ NEW: Link to the manifest file -->
     <link rel="manifest" href="manifest.json">
 
     <!-- Fonts -->
