--- a/client-app.html
+++ b/client-app.html
@@ -525,7 +525,10 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const API_URL = "https://script.google.com/macros/s/AKfycbyqsUFFmmrToVUEImnjM6Bo9SkzFAIIpZvWM5GoBy_R3cEoV7i4K9xx6M_fqhGpqgms/exec";
+            // ⭐️⭐️⭐️ ACTION REQUIRED ⭐️⭐️⭐️
+            // This is the NEW, correct API URL you provided.
+            const API_URL = "https://script.google.com/macros/s/AKfycbyNrsIMfhEvzfIamW2qdteuFwEAdVkes-EnyKRnMWyJeNYxXUC9IssddoHBlvcM5XQ6/exec";
+            
             const CHAT_TEMPLATES = ["המכולה מלאה, אשמח לתאם פינוי.", "צריך להחליף את המכולה במכולה ריקה.", "האם ניתן לקבל מכולה נוספת?", "מה צפי ההגעה של הנהג?", "תודה רבה על השירות המהיר!", "יש לי שאלה בנוגע לחיוב.", "האם ניתן להאריך את זמן השהייה של המכולה?", "עדכון כתובת - הפינוי יתבצע מכתובת אחרת.", "בקשה דחופה למכולה, אנא צרו קשר.", "הכל בסדר, רק רציתי לוודא שההזמנה התקבלה."];
             let clientState = { id: null, name: null, orders: [], addresses: new Set(), historyChart: null };
             let refreshInterval;
@@ -570,10 +573,10 @@
                 if (!clientId) return;
                 if (!isRefresh) appContainer.style.opacity = '0.5';
                 try {
-                    const data = await apiGet(`getClientData?clientId=${clientId}`);
+                    const data = await apiGet(`getClientData?identifier=${clientId}`); // Changed to generic identifier
                     if (!data || !data.clientName) throw new Error("Client not found");
-                    clientState = { id: clientId, name: data.clientName, orders: data.orders || [], addresses: new Set(data.orders.map(o => o['כתובת']).filter(Boolean)), historyChart: clientState.historyChart };
-                    localStorage.setItem('saban_client_id', clientId);
+                    clientState = { id: data.clientId, name: data.clientName, orders: data.orders || [], addresses: new Set(data.orders.map(o => o['כתובת']).filter(Boolean)), historyChart: clientState.historyChart };
+                    localStorage.setItem('saban_client_id', data.clientId); // Save the actual ID
                     renderHeaderAndGreeting();
                     renderHomePage();
                     renderContainersPage();
@@ -582,7 +585,7 @@
                 } catch (error) {
                     console.error("Failed to load client data:", error);
                     localStorage.removeItem('saban_client_id');
-                    if (error.message.includes("Client not found")) alert("מספר לקוח לא נמצא. אנא ודא שהקלדת את המספר הנכון ונסה שוב.");
+                    if (error.message.includes("Client not found")) alert("מספר לקוח או טלפון לא נמצאו. אנא ודא שהקלדת את הפרט הנכון ונסה שוב.");
                     else alert("שגיאה בטעינת נתוני לקוח. אנא בדוק את חיבור האינטרנט ונסה שוב.");
                     promptForClientId();
                 } finally {
@@ -594,9 +597,9 @@
             async function apiPost(body) { const response = await fetch(API_URL, { method: 'POST', headers: { 'Content-Type': 'text/plain;charset=utf-8' }, body: JSON.stringify(body) }); if (!response.ok) throw new Error('Network response was not ok.'); return await response.json(); }
 
             function promptForClientId() {
-                const clientId = prompt("שלום! אנא הזן את מספר הלקוח שלך כדי להתחבר:");
-                if (clientId && clientId.trim() !== '') loadClientData(clientId.trim());
-                else document.body.innerHTML = `<div style="padding: 20px; text-align: center;"><h1>נדרש מספר לקוח. אנא רענן ונסה שוב.</h1></div>`;
+                const identifier = prompt("שלום! אנא הזן מספר לקוח או מספר טלפון כדי להתחבר:");
+                if (identifier && identifier.trim() !== '') loadClientData(identifier.trim());
+                else document.body.innerHTML = `<div style="padding: 20px; text-align: center;"><h1>נדרש מספר לקוח או טלפון. אנא רענן ונסה שוב.</h1></div>`;
             }
             
             function updateClock() {
