--- a/client-app.html
+++ b/client-app.html
@@ -26,11 +26,6 @@
             --shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
         }
 
-        @keyframes neon-blink {
-            0%, 100% { opacity: 1; text-shadow: 0 0 5px currentColor, 0 0 10px currentColor; }
-            50% { opacity: 0.7; text-shadow: none; }
-        }
-
         @keyframes pulse {
             0% { transform: scale(1); }
             50% { transform: scale(1.1); }
@@ -527,7 +522,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             // ⭐️⭐️⭐️ ACTION REQUIRED ⭐️⭐️⭐️
             // This is the NEW, correct API URL you provided.
-            const API_URL = "[https://script.google.com/macros/s/AKfycbwtDxDpgzZg0vB2jZ56Y8xQpW3oMGEwsbI6KqP2pgkWb0D_Owj3gtOJ7-jVtWmG5S3r/exec)";
+            const API_URL = "https://script.google.com/macros/s/AKfycbwtDxDpgzZg0vB2jZ56Y8xQpW3oMGEwsbI6KqP2pgkWb0D_Owj3gtOJ7-jVtWmG5S3r/exec";
             
             const CHAT_TEMPLATES = ["המכולה מלאה, אשמח לתאם פינוי.", "צריך להחליף את המכולה במכולה ריקה.", "האם ניתן לקבל מכולה נוספת?", "מה צפי ההגעה של הנהג?", "תודה רבה על השירות המהיר!", "יש לי שאלה בנוגע לחיוב.", "האם ניתן להאריך את זמן השהייה של המכולה?", "עדכון כתובת - הפינוי יתבצע מכתובת אחרת.", "בקשה דחופה למכולה, אנא צרו קשר.", "הכל בסדר, רק רציתי לוודא שההזמנה התקבלה."];
             let clientState = { id: null, name: null, orders: [], addresses: new Set(), historyChart: null };
